syntax = "proto3";

package ironhost.v1;

option go_package = "github.com/ironhost/proto/ironhost/v1";

import "ironhost/v1/common.proto";
import "google/protobuf/empty.proto";

// AgentService - RPC service running on each Agent node
// Master Control Plane connects to this service to manage game servers
service AgentService {
  // Server lifecycle management
  rpc CreateServer(CreateServerRequest) returns (CreateServerResponse);
  rpc StartServer(ServerIdentifier) returns (ServerActionResponse);
  rpc StopServer(StopServerRequest) returns (ServerActionResponse);
  rpc RestartServer(ServerIdentifier) returns (ServerActionResponse);
  rpc DeleteServer(ServerIdentifier) returns (ServerActionResponse);
  
  // Server information
  rpc GetServerStatus(ServerIdentifier) returns (ServerState);
  rpc ListServers(google.protobuf.Empty) returns (ListServersResponse);
  
  // Console interaction
  rpc StreamConsole(ServerIdentifier) returns (stream ConsoleOutput);
  rpc SendCommand(SendCommandRequest) returns (ServerActionResponse);
  
  // Node health
  rpc GetNodeStats(google.protobuf.Empty) returns (NodeStats);
  rpc Ping(google.protobuf.Empty) returns (PingResponse);
}

// Request to create a new game server container
message CreateServerRequest {
  string server_id = 1;
  string name = 2;
  
  // Docker image - defaults to itzg/minecraft-server if not specified
  string docker_image = 3;
  
  // Resource limits
  ResourceLimits limits = 4;
  
  // Port allocations
  repeated Allocation allocations = 5;
  
  // Environment variables (includes TYPE for server type, e.g., TYPE=LEAF)
  repeated EnvVar environment = 6;
  
  // Volume mount path on host
  string data_directory = 7;
}

message CreateServerResponse {
  bool success = 1;
  string container_id = 2;
  string error_message = 3;
}

message StopServerRequest {
  string server_id = 1;
  int32 timeout_seconds = 2;  // Graceful shutdown timeout
}

message ServerActionResponse {
  bool success = 1;
  string error_message = 2;
}

message ListServersResponse {
  repeated ServerState servers = 1;
}

message ConsoleOutput {
  string server_id = 1;
  string line = 2;
  int64 timestamp = 3;
  bool is_error = 4;
}

message SendCommandRequest {
  string server_id = 1;
  string command = 2;
}

message NodeStats {
  string node_id = 1;
  int64 total_memory_bytes = 2;
  int64 available_memory_bytes = 3;
  int64 total_disk_bytes = 4;
  int64 available_disk_bytes = 5;
  double cpu_usage_percent = 6;
  int32 running_containers = 7;
  int64 uptime_seconds = 8;
}

message PingResponse {
  string node_id = 1;
  string version = 2;
  int64 timestamp = 3;
}
