syntax = "proto3";

package ironhost.v1;

option go_package = "github.com/ironhost/proto/ironhost/v1";

import "google/protobuf/timestamp.proto";

// Common message types used across services

message ServerIdentifier {
  string server_id = 1;
}

message NodeIdentifier {
  string node_id = 1;
}

// Resource limits for a game server container
message ResourceLimits {
  int64 memory_mb = 1;      // Memory limit in MB
  int64 disk_mb = 2;        // Disk limit in MB
  int32 cpu_percent = 3;    // CPU limit as percentage (100 = 1 core)
  int32 io_weight = 4;      // Block IO weight (10-1000)
}

// Port allocation for a server
message Allocation {
  string id = 1;
  string ip_address = 2;
  int32 port = 3;
  bool is_primary = 4;
}

// Environment variable for container
message EnvVar {
  string key = 1;
  string value = 2;
}

// Server status enum
enum ServerStatus {
  SERVER_STATUS_UNSPECIFIED = 0;
  SERVER_STATUS_INSTALLING = 1;
  SERVER_STATUS_OFFLINE = 2;
  SERVER_STATUS_STARTING = 3;
  SERVER_STATUS_RUNNING = 4;
  SERVER_STATUS_STOPPING = 5;
  SERVER_STATUS_SUSPENDED = 6;
}

// Detailed server state information
message ServerState {
  string server_id = 1;
  ServerStatus status = 2;
  int64 memory_usage_bytes = 3;
  int64 disk_usage_bytes = 4;
  double cpu_usage_percent = 5;
  int64 uptime_seconds = 6;
  google.protobuf.Timestamp last_updated = 7;
}
